Fix scrollbars https://www.smashingmagazine.com/2023/12/new-css-viewport-units-not-solve-classic-scrollbar-problem/

--- a/scss/lexicon.scss
+++ b/scss/lexicon.scss
@@ -68,7 +68,7 @@ $left-column-margin-ratio: 0.015;
     line-break: loose;
     min-width: 432px;
     /* to always show the vertical scrollbar */
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: auto;
     color: $text-color;
     background: $background-color url('../images/handmadepaper.webp') repeat scroll 0 0;
@@ -86,9 +86,11 @@ body {
     height: 0;
     margin-left: $left-column-margin-ratio * 100%;
     width: $left-column-ratio * 100%;
+    container-type: inline-size;
 
     div {
         height: 100vh;
+        height: 100cqh;
         padding-bottom: $padding-height;
         overflow-y: scroll;
         scrollbar-width: none;
